--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "vue-loader": "^16.8.3",
+        "vue-svg-loader": "^0.17.0-beta.2"
     },
     "dependencies": {
-        "tailwindcss": "^3.0.24"
+        "laravel-mix-svg-vue": "^0.4.1",
+        "leader-line": "^1.0.7",
+        "tailwindcss": "^3.0.24",
+        "vue": "^3.2.33",
+        "vue-flickity": "^1.2.1"
     }
 }
