--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
+    "/js/house.js": "/js/house.js",
     "/css/app.css": "/css/app.css",
     "/js/leader-line.min.js": "/js/leader-line.min.js",
     "/fonts/HelveticaNowText-Medium.otf": "/fonts/HelveticaNowText-Medium.otf",
