--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
     "/js/house.js": "/js/house.js",
+    "/js/argentine.js": "/js/argentine.js",
     "/js/globe.js": "/js/globe.js",
     "/css/app.css": "/css/app.css",
     "/js/leader-line.min.js": "/js/leader-line.min.js",
